# quarkus-skills-test

./: .secdevaiignore  AGENTS.md  README.md  pom.xml
.claude/skills/secdevai-dast/: SKILL.md
.claude/skills/secdevai-help/: SKILL.md
.claude/skills/secdevai-oci-image-security/: SKILL.md
.lola/modules/secdevai/: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.lola/modules/secdevai/.lola/: source.yml
.lola/modules/secdevai/docs/: USAGE.md
.lola/modules/secdevai/lola-module/skills/secdevai-dast/references/: rapidast-config-templates.md
.lola/modules/secdevai/lola-module/skills/secdevai-oci-image-security/references/: config-security-patterns.md  hardening-checklist.md
.lola/modules/secdevai/lola-module/skills/secdevai-review/context/: golang-security.context  wstg-testing.context
.lola/modules/secdevai/lola-module/skills/secdevai-tool/: SKILL.md
.lola/modules/secdevai/lola-module/skills/secdevai-tool/scripts/: container-run.sh
.lola/modules/secdevai/src/secdevai_cli/: __init__.py  __main__.py
.lola/modules/secdevai/tests/: conftest.py  test_cli.py  test_module_deployer.py
.skills/skills/file-tree/: SKILL.md
.skills/skills/hello/: SKILL.md
.skills/skills/poem-writing/: SKILL.md
.skills/skills/secdevai/: SKILL.md
.skills/skills/secdevai-export/: SKILL.md
.skills/skills/secdevai-fix/: SKILL.md
.skills/skills/secdevai-review/: SKILL.md
.skills/skills/secdevai-validate/: SKILL.md
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
(+13 files in other folders)
