[project]
name = "secdevai"
version = "0.4.0"
description = "AI-powered security code review tool with slash command integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
secdevai = "secdevai_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secdevai_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"lola-module" = "share/secdevai/lola-module"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

